[tool.poetry]
name = "lanelet2-map-tile-generator"
version = "0.1.0"
description = "A Python project to extract lanelet2 maps to tiles"
authors = [
    "Ata Parlar <ataparlar@leodrive.ai>",
    "Barış Zeren <baris@leodrive.ai>"
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "6.0.1"
lark = "^0.11.3"
pytest = "^7.1.3"
utm = "^0.7.0"
mgrs = "^1.4.6"
gdal = "3.4"
tqdm = "^4.66.2"
lanelet2 = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "subprocess>=3.5.3"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Documentation = "https://github.com/leo-drive/lanelet2-map-tile-generator/blob/main/README.md"
Source = "https://github.com/leo-drive/lanelet2-map-tile-generator"
Tracker = "https://github.com/leo-drive/lanelet2-map-tile-generator/issues"